[package]
name = "rusty-journal"
version = "0.1.0"
authors = ["xeoneux"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
structopt = "0.3.21"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.serde]
features = ["derive"]
version = "1.0.125"
